--- a/src/components/profile/Profile.module.css
+++ b/src/components/profile/Profile.module.css
@@ -2,6 +2,8 @@ div {
     width: 70%;
     display: grid;
     justify-self: center;
+
+    font-size: 1em;
 }
 
 .page {
@@ -47,11 +49,11 @@ div {
 
 .bio figure {
     width: 100%;
-    height: 260%;
+    height: 220%;
     position: relative;
 
-    top: -200%;
-    left: -35%;
+    top: -170%;
+    left: -45%;
 
     border-radius: 100%;
     border: 3px solid rgba(246, 246, 254, 1);
@@ -71,6 +73,14 @@ div {
 
 .name_and_status div {
     width: 100%;
+}
+
+.name {
+    font-size: 1.2em;
+    font-weight: 600;
+}
+.userName {
+    font-size: 0.9em;
 }
 
 .info main {
