--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,10 +1,13 @@
+body {
+    background-color: rgba(246, 246, 254, 1);
+    background-attachment: fixed;
+}
+
 .App {
     height: 100vh;
     width: 100vw;
     font-family: 'Inter', sans-serif;
-    font-size: 1em;
-
-    background-color: rgba(246, 246, 254, 1);
+    font-size: 0.9rem;
 }
 
 .page {
