--- a/src/components/registration/css_options/Page.css
+++ b/src/components/registration/css_options/Page.css
@@ -1,19 +1,21 @@
 .page {
     display: grid;
     align-items: center;
+    width: 81%;
+    max-width: 1164px;
 }
 
 .main {
     width: 100%;
-    height: 45%;
+    height: 50%;
     display: grid;
     justify-self: center;
 }
 
 .content {
     display: grid;
-    grid-template-columns: 55% 40%;
-    column-gap: 5%;
+    grid-template-columns: 50% 46%;
+    column-gap: 4%;
 }
 
 .content img {
@@ -27,6 +29,7 @@
 }
 
 .content main {
+    max-width: 541px;
     display: grid;
     grid-template-rows: 15% 80%;
     row-gap: 5%;
@@ -36,4 +39,8 @@
     border-radius: 20px;
     border: 1px solid #D5E0E5;
     background-color: #F7F5FF;
+}
+
+.content form input::-webkit-input-placeholder {
+    color: #5F6E78;
 }
