--- a/src/components/registration/registration_new_password/Registration_new_password.module.css
+++ b/src/components/registration/registration_new_password/Registration_new_password.module.css
@@ -1,6 +1,8 @@
-.main {
-    height: 60%;
+.content {
+    max-height: 384px;
+}
 
+.main {
     display: grid;
     grid-template-rows: 25% 70%;
     row-gap: 3%;
