--- a/src/App.module.css
+++ b/src/App.module.css
@@ -7,11 +7,11 @@ body {
     height: 100vh;
     width: 100vw;
     font-family: 'Inter', sans-serif;
-    font-size: 0.9rem;
+    font-size: 1em;
 }
 
 .page {
     height: 100%;
     display: grid;
-    /*justify-items: center;*/
+    justify-items: center;
 }
