made profile setting layout (without animation)

--- a/src/components/profile/profile/profile_setting/Profile_setting.module.css
+++ b/src/components/profile/profile/profile_setting/Profile_setting.module.css
@@ -58,10 +58,44 @@
     grid-template-rows: 70% 30%;
 }
 
+
 .bgc_profile {
     height: 100%;
     border-radius: 20px;
     background-color: rgba(210, 193, 244, 1);
+
+    transition: 1s;
+}
+.bgc_profile:hover {
+    background-image: url('../../../../assets/images/other/new_photo.svg');
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.bgc_profile:focus .det_delete_bgc {
+    display: grid;
+}
+
+.det_delete_bgc {
+    display: none;
+    grid-template-rows: 50% 50%;
+    align-items: center;
+    padding: 1% 4% 1% 5%;
+
+    position: absolute;
+    top: 20%;
+    left: 85%;
+
+    width: 19%;
+    height: 11%;
+
+    box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.25);
+    background-color: rgba(247, 245, 255, 1);
+    border-radius: 15px;
+}
+
+.det_delete_bgc section:hover {
+    background-color: rgba(65, 72, 109, 0.2);
 }
 
 .ava {
@@ -75,8 +109,42 @@
     background-color: rgba(221, 227, 235, 1);
 
     border-radius: 50%;
-    border: 3px solid rgba(247, 245, 255, 1)
+    border: 3px solid rgba(247, 245, 255, 1);
+
+    transition: 1s;
 }
+.ava:hover {
+    background-image: url('../../../../assets/images/other/new_ava.svg');
+    background-repeat: no-repeat;
+    background-size: cover;
+
+}
+
+.ava:focus .det_delete_ava {
+    display: grid;
+}
+
+.det_delete_ava {
+    display: none;
+    grid-template-rows: 50% 50%;
+    align-items: center;
+    padding: 5% 27% 5% 27%;
+
+    position: absolute;
+    top: 60%;
+    left: 70%;
+
+    width: 110%;
+    height: 62%;
+
+    box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.25);
+    background-color: rgba(247, 245, 255, 1);
+    border-radius: 15px;
+}
+.det_delete_ava section:hover {
+    background-color: rgba(65, 72, 109, 0.2);
+}
+
 
 .edit_form main {
     display: grid;
@@ -103,7 +171,7 @@
     grid-area: E;
 
     display: grid;
-    grid-template-rows: 20% 75%;
+    grid-template-rows: 15% 85%;
     row-gap: 5%;
 }
 .textAreaBox textarea {
