--- a/src/components/registration/registration_forgot_password/Registration_forgot_password.module.css
+++ b/src/components/registration/registration_forgot_password/Registration_forgot_password.module.css
@@ -1,11 +1,8 @@
-.content {
-    max-height: 384px;
-}
-
 .functional {
     display: grid;
     grid-template-rows: 35% 60%;
-    row-gap: 5%;
+
+    min-height: 23vh;
 }
 .functional form {
     display: grid;
@@ -30,5 +27,4 @@ input {
 
 .text p {
     margin: 0;
-    font-size: 0.8rem;
 }
