--- a/src/components/registration/registration_new_password/Registration_new_password.module.css
+++ b/src/components/registration/registration_new_password/Registration_new_password.module.css
@@ -1,24 +1,9 @@
-.content {
-    max-height: 384px;
-}
-
-.main {
-    display: grid;
-    grid-template-rows: 25% 70%;
-    row-gap: 3%;
-
-    padding: 8%;
-
-    border-radius: 20px;
-    border: 1px solid #D5E0E5;
-    background-color: #F7F5FF;
-
-}
-
-.main form {
+.form {
+    padding-top: 3%;
     display: grid;
     grid-template-rows: 55% 25%;
     row-gap: 15%;
+    min-height: 20vh;
 }
 
 .inputs {
