--- a/src/components/registration/css_options/Page.module.css
+++ b/src/components/registration/css_options/Page.module.css
@@ -1,40 +1,20 @@
-.page {
-    display: grid;
-    align-items: center;
-    width: 81%;
-    max-width: 1164px;
-}
-
-.main {
+div {
+    height: 100%;
     width: 100%;
-    height: 50%;
-    display: grid;
-    justify-self: center;
 }
 
 .content {
-    display: grid;
-    grid-template-columns: 50% 46%;
-    column-gap: 4%;
-}
+    width: 400px;
+    max-height: 540px;
+    position: absolute;
+    top: 25%;
+    left: 50%;
 
-.content img {
-    width: 70%;
-}
-
-.content aside {
     display: grid;
-    justify-items: center;
-    align-items: center;
-}
-
-.content main {
-    max-width: 541px;
-    display: grid;
-    grid-template-rows: 15% 80%;
+    grid-template-rows: 60px auto;
     row-gap: 5%;
 
-    padding: 8%;
+    padding: 3% 5% 3% 5%;
 
     border-radius: 20px;
     border: 1px solid #D5E0E5;
