--- a/src/components/blog_pages/center_components/profile/main_profile_css/Main_profile.module.css
+++ b/src/components/blog_pages/center_components/profile/main_profile_css/Main_profile.module.css
@@ -1,26 +1,3 @@
-.div {
-    width: 75%;
-    max-width: 1066px;
-    display: grid;
-    justify-self: center;
-}
-
-.page {
-    padding-top: 2%;
-
-    display: grid;
-    grid-template-columns: 15% 83%;
-    column-gap: 2%;
-}
-
-
-.main {
-    display: grid;
-
-    grid-template-columns: 70% 28%;
-    column-gap: 2%;
-}
-
 .info {
     max-width: 615px;
     display: grid;
@@ -32,6 +9,12 @@
     grid-template-rows: 35% 65%;
 
     border-bottom: 1px solid rgba(217, 217, 217, 1);
+}
+
+.bio_row {
+    display: grid;
+    grid-template-columns: 18% 60% 16%;
+    column-gap: 3%;
 }
 
 .name_and_status {
