--- a/src/components/blog_pages/center_components/profile/post/Post.module.css
+++ b/src/components/blog_pages/center_components/profile/post/Post.module.css
@@ -1,7 +1,3 @@
-.all_page {
-    height: 100%;
-}
-
 .page {
     padding: 20px 0 20px 0;
     width: 100%;
@@ -41,6 +37,8 @@
 }
 .userName {
     font-size: 0.9em;
+    color: rgba(135, 145, 161, 1);
+
 }
 
 .post {
