created a redux store and made connections with components

--- a/src/components/registration/restore_account/RestoreAccount.module.css
+++ b/src/components/registration/restore_account/RestoreAccount.module.css
@@ -35,8 +35,19 @@
 .button_restore {
     width: 100%;
     border-radius: 5px;
+    display: grid;
+    align-content: center;
+    justify-content: center;
+
+    text-decoration: none;
 }
 .button_cancel {
     width: 42%;
     border-radius: 5px;
+
+    display: grid;
+    align-content: center;
+    justify-content: center;
+
+    text-decoration: none;
 }
