big commit made change password successfully activate account and change email has right request but not working because data don't save

--- a/src/components/blog_pages/center_components/settings/components/change_email/components/change_email_form/ChangeEmailForm.module.css
+++ b/src/components/blog_pages/center_components/settings/components/change_email/components/change_email_form/ChangeEmailForm.module.css
@@ -4,14 +4,14 @@
     width: 70%;
 }
 
-.rootChangeEmail form {
+.form {
     height: 100%;
     display: grid;
     grid-template-rows: 60% 35%;
     row-gap: 10%;
 }
 
-.rootChangeEmail form main {
+.form main {
     height: 100%;
     padding: 0;
     display: grid;
