--- a/src/components/blog_pages/navigation/Navigation.module.css
+++ b/src/components/blog_pages/navigation/Navigation.module.css
@@ -109,6 +109,8 @@
     width: 100%;
     background-color: transparent;
     border: none;
+    text-decoration: none;
+    color: #000;
 
     font-weight: 600;
 
