--- a/src/components/registration/registration_or_authorization/RegistrationOrAutorisation.module.css
+++ b/src/components/registration/registration_or_authorization/RegistrationOrAutorisation.module.css
@@ -4,7 +4,7 @@
     grid-template-rows: 50% 40%;
 }
 
-.functional form {
+.form {
     display: grid;
     grid-template-rows: 60% 25%;
     row-gap: 15%;
@@ -37,7 +37,7 @@
     font-family: 'Inter', sans-serif;
 }
 
-.functional form a {
+.form a {
     width: 100%;
     height: 100%;
 }
