oh i did a lot, i don't want to write all

--- a/src/components/blog_pages/MainBlogsPages.module.css
+++ b/src/components/blog_pages/MainBlogsPages.module.css
@@ -9,6 +9,6 @@
     padding-top: 2%;
 
     display: grid;
-    grid-template-columns: 15% 83%;
+    grid-template-columns: 160px 885px;
     column-gap: 2%;
 }
