--- a/src/components/blog_pages/center_components/profile/main_profile_css/MainProfile.module.css
+++ b/src/components/blog_pages/center_components/profile/main_profile_css/MainProfile.module.css
@@ -6,19 +6,22 @@
 
 .bio {
     display: grid;
-    grid-template-rows: 35% 65%;
+    grid-template-rows: 40% 55%;
+    row-gap: 5%;
 
     border-bottom: 1px solid rgba(217, 217, 217, 1);
 }
 
 .bio_row {
+    height: 100%;
     display: grid;
-    grid-template-columns: 18% 60% 16%;
+    grid-template-columns: 23% 55% 16%;
     column-gap: 3%;
 }
 
 .name_and_status {
     width: 100%;
+    height: 100%;
     display: grid;
     grid-template-rows: 50% 50%;
     justify-content: left;
@@ -31,8 +34,6 @@
 .info main {
     padding: 2% 4% 0 4%;
 
-    display: grid;
-    grid-template-rows: 15% auto;
 
     background-color: #F7F5FF;
     border: 1px solid #DDE3EB;
