--- a/src/components/blog_pages/center_components/profile/post/Post.module.css
+++ b/src/components/blog_pages/center_components/profile/post/Post.module.css
@@ -3,7 +3,7 @@
     width: 100%;
     display: grid;
     grid-template-rows: 50px auto;
-    row-gap: 5%;
+    row-gap: 15px;
 
     border-bottom: 1px solid #D9D9D9;
 }
@@ -11,19 +11,31 @@
 .page header {
     width: 100%;
     display: grid;
-    grid-template-columns: 9% 87%;
-    column-gap: 3%;
+    grid-template-columns: 9% 82% 5%;
+    column-gap: 2%;
 
 }
 
 .name_and_status {
     display: grid;
-    grid-template-rows: 50% 50%;
+    grid-template-rows: 35% 35%;
     justify-content: left;
 }
 
 .page header div {
     width: 100%;
+}
+
+.section_img {
+    width: 50px;
+    height: 50px;
+}
+.section_img img {
+    width: 100%;
+    height: 100%;
+    border-radius: 20px;
+    object-fit: cover;
+    object-position: center;
 }
 
 .post_author_img {
@@ -34,6 +46,7 @@
 
 .name {
     font-size: 0.9em;
+    font-weight: 600;
 }
 .userName {
     font-size: 0.9em;
@@ -57,5 +70,5 @@
     width: 100%;
 
     border-radius: 7px;
-    background-color: #D9D9D9;
+    background-color: #DDE3EB;
 }
