--- a/src/components/blog_pages/center_components/profile/profile/profile_setting/ProfileSetting.module.css
+++ b/src/components/blog_pages/center_components/profile/profile/profile_setting/ProfileSetting.module.css
@@ -22,6 +22,10 @@
     height: 100%;
 }
 
+.hidden {
+    display: none;
+}
+
 .edit_prof_window {
     position: relative;
     top: 0;
@@ -64,12 +68,26 @@
     border-radius: 20px;
     background-color: rgba(210, 193, 244, 1);
 
+    z-index: 400;
+
     transition: 1s;
 }
-.bgc_profile:hover {
+
+.img_cover {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    border-radius: 20px;
+    object-fit: cover;
+    z-index: 200;
+
+    transition: 1s;
+}
+
+.img_cover:hover {
     background-image: url('../../../../../../assets/images/other/new_photo.svg');
-    background-repeat: no-repeat;
-    background-size: cover;
+    filter: brightness(90%);
+    background-position: center;
 }
 
 .bgc_profile:focus .det_delete_bgc {
@@ -88,6 +106,7 @@
 
     width: 19%;
     height: 11%;
+    z-index: 500;
 
     box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.25);
     background-color: rgba(247, 245, 255, 1);
@@ -96,6 +115,7 @@
 
 .det_delete_bgc section:hover {
     background-color: rgba(65, 72, 109, 0.2);
+    z-index: 450;
 }
 
 .edit_prof_window .ava {
@@ -106,17 +126,29 @@
     width: 100%;
     max-height: 114px;
     max-width: 114px;
-    background-color: rgba(221, 227, 235, 1);
 
     border-radius: 50%;
     border: 3px solid rgba(247, 245, 255, 1);
 
+    z-index: 400;
+}
+
+.img_ava {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    object-fit: cover;
+    z-index: 200;
     transition: 1s;
 }
-.ava:hover {
-    background-image: url('../../../../../../assets/images/other/new_ava.svg');
-    background-repeat: no-repeat;
-    background-size: cover;
+
+.img_ava:hover {
+    background-image: url('../../../../../../assets/images/other/new_photo.svg');
+    filter: brightness(90%);
+    background-position: center;
+
+    z-index: 450;
 
 }
 
@@ -136,6 +168,7 @@
 
     width: 110%;
     height: 62%;
+    z-index: 500;
 
     box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.25);
     background-color: rgba(247, 245, 255, 1);
@@ -145,6 +178,11 @@
     background-color: rgba(65, 72, 109, 0.2);
 }
 
+
+.delete {
+    border: none;
+    background-color: transparent;
+}
 
 .edit_form main {
     display: grid;
