--- a/src/components/blog_pages/center_components/profile/main_profile_css/MainProfileAside.module.css
+++ b/src/components/blog_pages/center_components/profile/main_profile_css/MainProfileAside.module.css
@@ -24,10 +24,17 @@
 }
 
 .friendsAva {
-    height: 58%;
+    position: absolute;
+
+    top: 250px;
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: repeat(6, 11%);
 }
+
+.block {
+    display: block;
+}
+
 
 .friendPhoto {
     margin: 0;
@@ -37,6 +44,14 @@
     height: 48px;
     background-color: rgba(221, 227, 235, 1);
     border: 1px solid rgba(255, 255, 255, 1);
+}
+
+.friendPhoto img {
+    width: 100%;
+    height: 100%;
+    border-radius: 20px;
+    object-fit: cover;
+    object-position: center;
 }
 
 .photo {
@@ -63,4 +78,18 @@
 
     border-radius: 3px;
     background-color: #DDE3EB;
+}
+
+
+
+.shortInfoSection {
+    margin-top: 10px;
+    position: relative;
+    width: 300px;
+    min-height: 287px;
+    border-radius: 10px;
+
+
+    background-color: #FFFFFF;
+
 }
