edit profile settings css

--- a/src/components/blog_pages/center_components/profile/profile/profile_setting/ProfileSetting.module.css
+++ b/src/components/blog_pages/center_components/profile/profile/profile_setting/ProfileSetting.module.css
@@ -108,7 +108,7 @@
     z-index: 500;
 
     box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.25);
-    background-color: rgba(247, 245, 255, 1)
+    background-color: rgba(247, 245, 255, 1);
     border-radius: 15px;
 }
 
